# moptimizer

./: .clang-format  CMakeLists.txt  README.md
data/: gauss1.txt
include/: Icost.hh  Isolver.hh  cost.hh  gauss_newton.hh  jacobian.hh  model.hh  numeric.hh  reduce.hh
lib/: gauss_newton.cc
src/: data_loader.hh  gauss.cc  main.cc  point2.cc  simple.cc  util.hh
tst/: curve_fitting.cc  powell.cc  simple.cc  test_models.h
